--- a/404.md
+++ b/404.md
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: April 2014
 client: 404 client
 category: 404 Development
-description: 404 Use this area of the page to describe your project. Page not found.
+description: 404 Use this area of the page to describe your project. Page NOT found.
 ---
