--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -2,10 +2,12 @@
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: submarine.png
-alt: image-alt
+img: map.png
+alt: Interactive map
+iframe: "https://wyrax.github.io/cv/portfolio/ukraine-map/ukraine-map-09cv.html"
+project-name: Interactive map of Ukraine
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+description: "Set id=map-wrapper width: 100%. Crop table"
 ---
