--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,15 +1,16 @@
 ---
 layout: default
 modal-id: 4
-date: 2014-07-15
+date: 2021-02-02
 img: game.png
 alt: image-alt
 iframe: 
-project-name: Project Name
-project-date: Project Date
-project-type: Project Type
+project-name: Adobe Creative Cloud scripting
+project-date: 2021
+project-type: Automation, Batch-processing, Scripting
 
-client: Start Bootstrap
-category: Web Development
-description: Use this soluta, eos quod consequuntur itaque. Nam.
+client: SportLife
+client-url: https://www.sportlife.ua/uk
+category: ExtendScript Development / Web Development
+description: Various automation scripts for Adobe Creative Cloud (Illustrator, InDesign).<a href="https://wyrax.github.io/data-merge-ranges/" target="_blank">Online Data Merge ranges generator for Adobe Indesign</a><br><br><a href="https://github.com/Wyrax/GenerateQRs" target="_blank">GenerateQRs for InDesign</a><br><a href="https://github.com/Wyrax/RenameArtboards" target="_blank">RenameArtboards for Illustrator</a><br><a href="https://github.com/Wyrax/ExportAllOpenDocumentsToPDF" target="_blank">ExportAllOpenDocumentsToPDF for Adobe InDesign</a><br>
 ---
