--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -12,5 +12,5 @@ project-type: Automation, Batch-processing, Scripting
 client: SportLife
 client-url: https://www.sportlife.ua/uk
 category: ExtendScript Development / Web Development
-description: Various automation scripts for Adobe Creative Cloud (Illustrator, InDesign).<br><i class="fa fa-rocket"></i> <a href="https://wyrax.github.io/data-merge-ranges/" target="_blank">Online Data Merge ranges generator for Indesign</a><br><i class="fa fa-github"></i> <a href="https://github.com/Wyrax/GenerateQRs" target="_blank">GenerateQRs for InDesign</a><br><i class="fa fa-github"></i> <a href="https://github.com/Wyrax/RenameArtboards" target="_blank">RenameArtboards for Illustrator</a><br><i class="fa fa-github"></i> <a href="https://github.com/Wyrax/ExportAllOpenDocumentsToPDF" target="_blank">ExportAllOpenDocumentsToPDF for InDesign</a><br>
+description: Various automation scripts for Adobe Creative Cloud (Illustrator, InDesign).<br><br><i class="fa fa-rocket"></i> <a href="https://wyrax.github.io/data-merge-ranges/" target="_blank">Online Data Merge ranges generator for Indesign</a><br><i class="fa fa-github"></i> <a href="https://github.com/Wyrax/GenerateQRs" target="_blank">GenerateQRs for InDesign</a><br><i class="fa fa-github"></i> <a href="https://github.com/Wyrax/RenameArtboards" target="_blank">RenameArtboards for Illustrator</a><br><i class="fa fa-github"></i>&nbsp;<a href="https://github.com/Wyrax/ExportAllOpenDocumentsToPDF" target="_blank">ExportAllOpenDocumentsToPDF for InDesign</a><br>
 ---
